# IMS-VUT-BIT-2018-2019

./: CMakeLists.txt  Makefile  README.md  main.cpp
doc/: _titlepage.tex  doc.tex
src/: cricket.cpp  cricket.h  hatch_event.cpp  hatch_event.h  settings.h  stats.cpp  stats.h
